@@ -9,6 +9,7 @@ Enhancements
 - new Interval properties min, minInclusive, max, maxInclusive
 - new method StringUtil.quoteIfNotNull()
 - new class ConditionalConverter
+- Added TimeUtil.addDays(), addMonths(), addYears()
 
 
 Bug fixes (find the tracker at http://sourceforge.net/tracker/?group_id=222964&atid=1057386)
